--- a/index.html
+++ b/index.html
@@ -10,29 +10,44 @@
     <div class="article-wrapper">
       <article>
         <header>
-          <img class="hero-image" src="http://lorempixel.com/1000/300/" alt="Katze" />
+          <img class="hero-image" src="images/XL7fJMW.png" alt="Katze" />
           <div class="overlay">
             <span class="icon">❤</span>
-            <a href="http://lorempixel.com/1000/300/cats/" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
+            <a href="https://i.imgur.com/XL7fJMW.png" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
           </div>
         </header>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Newest cat content!
         </p>
       </article>
 
       <article>
         <header>
-          <img class="hero-image" src="http://lorempixel.com/1000/300/" alt="Katze" />
+          <img class="hero-image" src="/images/dtUw5da.jpg" alt="Katze" />
           <div class="overlay">
             <span class="icon">❤</span>
-            <a href="http://lorempixel.com/1000/300/cats/" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
+            <a href="https://i.imgur.com/dtUw5da.jpg" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
           </div>
         </header>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Newest cat content!
         </p>
       </article>
+
+      <article>
+        <header>
+          <img class="hero-image" src="/images/3usTtvz.jpg" alt="Katze" />
+          <div class="overlay">
+            <span class="icon">❤</span>
+            <a href="https://i.imgur.com/3usTtvz.jpg" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
+          </div>
+        </header>
+        <p>
+          Newest cat content!
+        </p>
+      </article>
+
+
     </div>
 
   <script src="js/main.js"></script>
