removed livereload changed urls to relative urls

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="article-wrapper">
       <article>
         <header>
-          <img class="hero-image" src="images/XL7fJMW.png" alt="Katze" />
+          <img class="hero-image" src="./images/XL7fJMW.png" alt="Katze" />
           <div class="overlay">
             <span class="icon">❤</span>
             <a href="https://i.imgur.com/XL7fJMW.png" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
@@ -23,7 +23,7 @@
 
       <article>
         <header>
-          <img class="hero-image" src="/images/dtUw5da.jpg" alt="Katze" />
+          <img class="hero-image" src="./images/dtUw5da.jpg" alt="Katze" />
           <div class="overlay">
             <span class="icon">❤</span>
             <a href="https://i.imgur.com/dtUw5da.jpg" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
@@ -36,7 +36,7 @@
 
       <article>
         <header>
-          <img class="hero-image" src="/images/3usTtvz.jpg" alt="Katze" />
+          <img class="hero-image" src="./images/3usTtvz.jpg" alt="Katze" />
           <div class="overlay">
             <span class="icon">❤</span>
             <a href="https://i.imgur.com/3usTtvz.jpg" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
@@ -50,7 +50,7 @@
 
     </div>
 
-  <script src="js/main.js"></script>
-  <script src="http://localhost:35729/livereload.js"></script>
+  <script src="./js/main.js"></script>
+  <!-- <script src=".http://localhost:35729/livereload.js"></script> -->
   </body>
 </html>
