--- a/index.html
+++ b/index.html
@@ -3,54 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Service Workers Are Great</title>
-    <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
-
-    <div class="article-wrapper">
-      <article>
-        <header>
-          <img class="hero-image" src="./images/XL7fJMW.png" alt="Katze" />
-          <div class="overlay">
-            <span class="icon">❤</span>
-            <a href="https://i.imgur.com/XL7fJMW.png" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
-          </div>
-        </header>
-        <p>
-          Newest cat content!
-        </p>
-      </article>
-
-      <article>
-        <header>
-          <img class="hero-image" src="./images/dtUw5da.jpg" alt="Katze" />
-          <div class="overlay">
-            <span class="icon">❤</span>
-            <a href="https://i.imgur.com/dtUw5da.jpg" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
-          </div>
-        </header>
-        <p>
-          Newest cat content!
-        </p>
-      </article>
-
-      <article>
-        <header>
-          <img class="hero-image" src="./images/3usTtvz.jpg" alt="Katze" />
-          <div class="overlay">
-            <span class="icon">❤</span>
-            <a href="https://i.imgur.com/3usTtvz.jpg" target=_blank><h3 class="title">I ❤ Service Workers</h3></a>
-          </div>
-        </header>
-        <p>
-          Newest cat content!
-        </p>
-      </article>
-
-
-    </div>
+  
+	<video width="320" height="240" controls>
+	<source src="https://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
+	</video>
+   
+	<video width="320" height="240" controls>
+	<source src="https://player.vimeo.com/external/98128930.sd.mp4?s=50c12e6160c3d80462e2b66fe768e5aa" type="video/mp4">
+	</video>
 
   <script src="./js/main.js"></script>
-  <!-- <script src=".http://localhost:35729/livereload.js"></script> -->
   </body>
 </html>
