feat(sync): integrate background sync to trigger replay as soon as the connection is up again

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<source src="https://player.vimeo.com/external/98128930.sd.mp4?s=50c12e6160c3d80462e2b66fe768e5aa" type="video/mp4">
 	</video>
 
+  <br/>
   <button type="button" onclick="sendPOST()">send POST</button>
+  <button type="button" onclick="requestOfflineSync()">request offline sync</button>
 
   <script src="./js/main.js"></script>
   </body>
