--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   <br/>
   <button type="button" onclick="sendPOST()">send POST</button>
   <button type="button" onclick="requestOfflineSync()">request offline sync</button>
+  
+  <!-- Quota Management Stuff -->
+  <br/>
+  <script src="./js/quotaManagement.js"></script>
+  <button type="button" onclick="alertTemporaryQuota()">check temporary quota</button>
+  <button type="button" onclick="alertPersistentQuota()">check persistent quota</button>
 
   <script src="./js/main.js"></script>
   </body>
