video player should not crash anymore when the service worker finishes downloading and storing the video while the player is already running (see README.md for details)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-	<video width="320" height="240" controls>
+	<video width="320" height="240" controls crossorigin>
 	<source src="https://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
 	</video>
 
@@ -14,7 +14,7 @@
 	<img src="https://pbs.twimg.com/media/CcOLGxlWEAAwHm5.jpg" width="320" /></div>
 
 
-	<video width="320" height="240" controls>
+	<video width="320" height="240" controls crossorigin>
 	<source src="https://player.vimeo.com/external/98128930.sd.mp4?s=50c12e6160c3d80462e2b66fe768e5aa" type="video/mp4">
 	</video>
 
