unicode console stuff

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     	<source src="https://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
     	</video>
 
-      <p>Wird cecached</p>
+      <p>Wird gecached</p>
 
     </article>
 
@@ -62,7 +62,7 @@
     	<source src="https://player.vimeo.com/external/98128930.sd.mp4?s=50c12e6160c3d80462e2b66fe768e5aa" type="video/mp4">
     	</video>
 
-      <p>Wird cecached</p>
+      <p>Wird gecached</p>
 
     </article>
 
