add header to bypass cache

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <div class="article-wrapper buttons">
 
     <button type="button" onclick="sendPOST()">send POST</button>
+    <button type="button" onclick="sendGET(false)">GET</button>
+    <button type="button" onclick="sendGET(true)">GET bypass Cache</button>
+
     <button type="button" onclick="requestOfflineSync()">request offline sync</button>
 
     <button type="button" onclick="alertTemporaryQuota()">check temporary quota</button>
