add communication with service worker to request cached pages

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <button type="button" onclick="alertTemporaryQuota()">check temporary quota</button>
     <button type="button" onclick="alertPersistentQuota()">check persistent quota</button>
 
+    <button type="button" onclick="askServiceWorker()">ask service worker</button>
 
   </div>
 
